--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@prisma/client": "^3.1.1",
+    "@prisma/client": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -22,8 +22,11 @@
     "youch": "^2.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
     "@sucrase/jest-plugin": "^2.1.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -32,7 +35,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
-    "prisma": "^3.1.1",
+    "prisma": "^3.3.0",
     "sucrase": "^3.20.1"
   }
 }
