--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "nodemon src/server.js",
     "dev:server": "nodemon --inspect  src/server.js",
     "orm": "npx prisma",
-    "test": "jest --coverage"
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^3.3.0",
